[CST-3763] fix contrast color issue for navbar menu entries

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -46,3 +46,12 @@ nav.navbar {
 a.navbar-brand img {
     max-height: var(--ds-header-logo-height);
 }
+
+.navbar-nav {
+  ::ng-deep a.nav-link {
+    color: var(--ds-navbar-link-color);
+  }
+  ::ng-deep a.nav-link:hover {
+    color: var(--ds-navbar-link-color-hover);
+  }
+}
